--- a/projetos.html
+++ b/projetos.html
@@ -12,7 +12,7 @@
         <hr class="vertical">
         <nav class="nav-bar">
             <ul>
-                <li><a href="./home.html">Home</a>
+                <li><a href="./index.html">Home</a>
                 </li>
             </ul>
             <ul>
